server/k8s/base/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webby-ingress
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 5g
spec:
  ingressClassName: nginx
  rules:
    - host: webby-app.duckdns.org
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: api-gateway
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web-service
                port:
                  number: 3000
